--- a/WebAPIGroup2/WebAPIGroup2.csproj
+++ b/WebAPIGroup2/WebAPIGroup2.csproj
@@ -23,6 +23,7 @@
   <ItemGroup>
     <Folder Include="Controllers\AdminModule\" />
     <Folder Include="Image\" />
+    <Folder Include="Models\POJO\" />
   </ItemGroup>
 
 </Project>
