--- a/WebAPIGroup2/appsettings.json
+++ b/WebAPIGroup2/appsettings.json
@@ -11,5 +11,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "MailSettings": {
+    "Mail": "huy.tran9510@gmail.com",
+    "DisplayName": "Thuhuy",
+    "Password": "omupuqnffjlqjcac",
+    "Host": "smtp.gmail.com",
+    "Port": 587
+  },
   "AllowedHosts": "*"
 }
