--- a/WebAPIGroup2/WebAPIGroup2.csproj
+++ b/WebAPIGroup2/WebAPIGroup2.csproj
@@ -7,6 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\Image\cach-cai-hinh-nen-doi-theo-ngay-dem-tren-iphone-d-1.jpg" />
+    <Content Remove="wwwroot\Image\image (1).jpg" />
+    <Content Remove="wwwroot\Image\image (2).jpg" />
+    <Content Remove="wwwroot\Image\image (3).jpg" />
+    <Content Remove="wwwroot\Image\image.jpg" />
+    <Content Remove="wwwroot\Image\images_Ảnh chụp màn hình 2023-04-01 200534.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="MailKit" Version="4.2.0" />
@@ -28,6 +37,15 @@
     <PackageReference Include="MimeKit" Version="4.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\Image\cach-cai-hinh-nen-doi-theo-ngay-dem-tren-iphone-d-1.jpg" />
+    <None Include="wwwroot\Image\image (1).jpg" />
+    <None Include="wwwroot\Image\image (2).jpg" />
+    <None Include="wwwroot\Image\image (3).jpg" />
+    <None Include="wwwroot\Image\image.jpg" />
+    <None Include="wwwroot\Image\images_Ảnh chụp màn hình 2023-04-01 200534.png" />
   </ItemGroup>
 
 </Project>
