--- a/WebAPIGroup2/WebAPIGroup2.csproj
+++ b/WebAPIGroup2/WebAPIGroup2.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\Avatar\image.jpg" />
     <Content Remove="wwwroot\Image\cach-cai-hinh-nen-doi-theo-ngay-dem-tren-iphone-d-1.jpg" />
     <Content Remove="wwwroot\Image\image (1).jpg" />
     <Content Remove="wwwroot\Image\image (2).jpg" />
@@ -40,6 +41,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="wwwroot\Avatar\image.jpg" />
     <None Include="wwwroot\Image\cach-cai-hinh-nen-doi-theo-ngay-dem-tren-iphone-d-1.jpg" />
     <None Include="wwwroot\Image\image (1).jpg" />
     <None Include="wwwroot\Image\image (2).jpg" />
