--- a/WebAPIGroup2/WebAPIGroup2.csproj
+++ b/WebAPIGroup2/WebAPIGroup2.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="wwwroot\MyImage\7_huy.tran9510\**" />
+    <Content Remove="wwwroot\MyImage\7_huy.tran9510\**" />
+    <EmbeddedResource Remove="wwwroot\MyImage\7_huy.tran9510\**" />
+    <None Remove="wwwroot\MyImage\7_huy.tran9510\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="MailKit" Version="4.2.0" />
@@ -33,8 +40,7 @@
   <ItemGroup>
     <Folder Include="wwwroot\CategoryImage\" />
     <Folder Include="wwwroot\CollectionImage\" />
-    <Folder Include="wwwroot\MyImage\2_user1\Template_4\" />
-    <Folder Include="wwwroot\MyImage\7_huy.tran9510\" />
+    <Folder Include="wwwroot\MyImage\" />
   </ItemGroup>
 
 </Project>
